# GameProgrammingCpp

./: .gitignore  README.md
Chapter1/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
Chapter2/: Actor.cpp  Actor.h  AnimSpriteComponent.cpp  AnimSpriteComponent.h  BGSpriteComponent.cpp  BGSpriteComponent.h  CMakeLists.txt  Component.cpp  Component.h  Game.cpp  Game.h  Math.cpp  Math.h  Ship.cpp  Ship.h  SpriteComponent.cpp  SpriteComponent.h  main.cpp
Chapter3/: Actor.cpp  Actor.h  Asteroid.cpp  Asteroid.h  CMakeLists.txt  CircleComponent.cpp  CircleComponent.h  Component.cpp  Component.h  Game.cpp  Game.h  InputComponent.cpp  InputComponent.h  Laser.cpp  Laser.h  Math.cpp  Math.h  MoveComponent.cpp  MoveComponent.h  Random.cpp  Random.h  Ship.cpp  Ship.h  SpriteComponent.cpp  SpriteComponent.h
Chapter4/: AIComponent.cpp  AIComponent.h  AIState.cpp  AIState.h  Actor.cpp  Actor.h  Bullet.cpp  Bullet.h  CMakeLists.txt  CircleComponent.cpp  CircleComponent.h  Component.cpp  Component.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Grid.cpp  Grid.h  Math.cpp  Math.h  MoveComponent.cpp  MoveComponent.h  NavComponent.cpp  NavComponent.h  Search.cpp  SpriteComponent.cpp  SpriteComponent.h  Tile.cpp  Tile.h  Tower.cpp  Tower.h  main.cpp
Chapter5/: Chapter5.sln
Chapter5/Chapter5/: Actor.cpp  Actor.h  Asteroid.cpp  Asteroid.h  Chapter5.vcxproj  Chapter5.vcxproj.filters  CircleComponent.cpp  CircleComponent.h  Component.cpp  Component.h  Game.cpp  Game.h  InputComponent.cpp  InputComponent.h  Laser.cpp  Laser.h  Main.cpp  Math.cpp  Math.h  MoveComponent.cpp  MoveComponent.h  Random.cpp  Shader.cpp  Shader.h  Ship.cpp  Ship.h  SpriteComponent.cpp  SpriteComponent.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  packages.config
Chapter6/: Chapter6.sln
Chapter6/Chapter6/: Actor.cpp  Actor.h  CameraActor.cpp  CameraActor.h  Chapter6.vcxproj  Chapter6.vcxproj.filters  CircleComponent.cpp  CircleComponent.h  Component.cpp  Component.h  Game.cpp  Game.h  Main.cpp  Math.cpp  Math.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  MoveComponent.cpp  MoveComponent.h  PlaneActor.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SpriteComponent.cpp  SpriteComponent.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  packages.config
OpenGLTest/: CMakeLists.txt  main.cpp
OpenGLTest/src/: glad.c
